score table width 100% for narrow mobiles

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html lang="nl">
   <head>
     <script src="javascript/yahtzee.js" defer></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="images/javascript.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/stijl.css">
     <meta charset="UTF-8">
